Replaced old singletons and empty collections with new Java style