@@ -7,7 +7,6 @@ package io.github.vocabhunter.analysis.grid;
 import io.github.vocabhunter.analysis.file.TikaTool;
 
 import java.nio.file.Path;
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Predicate;
 import java.util.regex.Pattern;
@@ -22,7 +21,7 @@ public class DocumentGridReaderImpl implements DocumentGridReader {
         String fullText = TikaTool.read(file);
 
         if ("".equals(fullText)) {
-            return Collections.emptyList();
+            return List.of();
         } else {
             return SPLITTER.splitAsStream(fullText)
                 .map(String::trim)
