@@ -12,12 +12,9 @@ import org.junit.jupiter.api.Test;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Collections;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 public class FileToolTest {
     private static final String ERROR_TEMPLATE = "Error %s";
@@ -72,7 +69,7 @@ public class FileToolTest {
         FileTool.writeMinimalJson(newFile, ERROR_TEMPLATE);
 
         List<String> result = Files.readAllLines(newFile);
-        List<String> expected = Collections.singletonList("{}");
+        List<String> expected = List.of("{}");
 
         assertEquals(expected, result);
     }
