@@ -8,7 +8,6 @@ import io.github.vocabhunter.analysis.model.AnalysisWord;
 import io.github.vocabhunter.analysis.model.WordUse;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
 import java.util.List;
 
 import static java.util.stream.Collectors.toList;
@@ -74,6 +73,6 @@ public class WordFilterTest {
     }
 
     private static AnalysisWord word(final String word, final int uses) {
-        return new WordUse(word, uses, Collections.emptyList());
+        return new WordUse(word, uses, List.of());
     }
 }
