@@ -14,7 +14,6 @@ import org.junit.jupiter.api.Test;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -53,7 +52,7 @@ public class SessionSerialiserTest {
 
     @Test
     public void testInvalidFile() throws Exception {
-        Files.write(file, Collections.singletonList("unreadable"));
+        Files.write(file, List.of("unreadable"));
 
         assertThrows(VocabHunterException.class, () -> SessionSerialiser.read(file));
     }
