@@ -7,11 +7,10 @@ package io.github.vocabhunter.gui.model;
 import io.github.vocabhunter.analysis.settings.BaseListedFile;
 import io.github.vocabhunter.test.utils.AbstractBeanTest;
 
-import java.util.Collections;
 import java.util.List;
 
 public class FilterSettingsTest extends AbstractBeanTest<FilterSettings> {
-    private static final List<BaseListedFile> FILES = Collections.emptyList();
+    private static final List<BaseListedFile> FILES = List.of();
 
     @Override
     protected FilterSettings buildPrimary() {
