@@ -7,7 +7,6 @@ package io.github.vocabhunter.gui.search;
 import io.github.vocabhunter.gui.common.TestSequencedWord;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -21,7 +20,7 @@ public class SearcherTest {
 
     private static final TestSequencedWord WORD_BC = new TestSequencedWord("BC", 40);
 
-    private static final List<TestSequencedWord> EMPTY_WORDS = Collections.emptyList();
+    private static final List<TestSequencedWord> EMPTY_WORDS = List.of();
 
     private static final List<TestSequencedWord> WORDS = List.of(WORD_AA, WORD_AB, WORD_AC, WORD_BC);
 
